Remove deprecated URL creation